--- a/css/index.scss
+++ b/css/index.scss
@@ -2,6 +2,9 @@
 @use '_nav.scss';
 @use '_formatting.scss';
 @use '../css/seccion-2/seccion-two.scss';
+@use '_icon-squares.scss';
+
+$grayColor : #757575;
 
 
 /* 576px */ /* MEDIA QUERIES */ 
