--- a/css/formatting.css
+++ b/css/formatting.css
@@ -5,5 +5,5 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-family: "Inter", sans-serif;
-  line-height: 1.5;
-}/*# sourceMappingURL=formatting.css.map */
+  line-height: 28px;
+} /*# sourceMappingURL=formatting.css.map */
