--- a/css/index.css
+++ b/css/index.css
@@ -1,67 +1,170 @@
 .main-banner {
-  background-image: url("/img/background.jpeg");
-  height: 124vw;
-  background-size: cover;
-  background-position: center center;
-  padding: 24% 4%;
-  color: white;
-  text-align: center;
-  max-width: 95%;
-  margin: auto;
-  border-radius: 18px;
-  margin-top: 32px;
-}
-
-.main-banner h1 {
-  font-size: 28px;
-  line-height: 1.5;
-}
-
-.main-banner p {
-  font-size: 18px;
-  letter-spacing: 0.5px;
-  line-height: 1.78;
-  font-weight: lighter;
-}
-
-.navbar-brand img {
-  width: 33%;
-  height: auto;
-}
-
-.navbar-toggler-icon {
-  background-image: url("../img/ic_menu@3x.png");
-  background-size: contain;
-  height: 32px;
-  width: 32px;
-}
-
-.navbar-toggler {
-  border: none;
-  padding: 0;
-  height: 32px;
-  width: 32px;
-}
-
-.navbar-toggler:focus {
-  box-shadow: none;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Manrope", sans-serif;
-  line-height: 1.5;
-}
-
-p {
-  font-family: "Inter", sans-serif;
-  line-height: 1.5;
-}
-
-.title-paragraph h2 {
-  color: #151515;
-  font-size: 24px;
-}
-
-.title-paragraph p {
-  color: gray;
-} /* 576px */ /* MEDIA QUERIES *//*# sourceMappingURL=index.css.map */
+    background-image: url("/img/background.jpeg");
+    height: 140vw;
+    background-size: cover;
+    background-position: center center;
+    padding: 24% 4%;
+    color: white;
+    text-align: center;
+    max-width: 95%;
+    margin: auto;
+    border-radius: 18px;
+    margin-top: 32px;
+  }
+  
+  .main-banner h1 {
+    font-size: 28px;
+    line-height: 1.5;
+  }
+  
+  .main-banner p {
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    line-height: 1.78;
+    font-weight: lighter;
+  }
+  
+  .navbar-brand img {
+    width: 33%;
+    height: auto;
+  }
+  
+  .navbar-toggler-icon {
+    background-image: url("../img/ic_menu@3x.png");
+    background-size: contain;
+    height: 32px;
+    width: 32px;
+  }
+  
+  .navbar-toggler {
+    border: none;
+    padding: 0;
+    height: 32px;
+    width: 32px;
+  }
+  
+  .navbar-toggler:focus {
+    box-shadow: none;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Manrope", sans-serif;
+    line-height: 1.5;
+  }
+  
+  p {
+    font-family: "Inter", sans-serif;
+    line-height: 28px;
+  }
+  
+  .title-paragraph h2 {
+    color: #151515;
+    font-size: 24px;
+    font-weight: 700;
+  }
+  
+  .title-paragraph p {
+    color: #757575;
+  }
+  
+  .square-bg {
+    background-color: #2965fe;
+    color: #FFF;
+    border-radius: 18px;
+    min-height: 500px;
+    padding-top: 40px;
+    margin: 32px 0;
+    padding-bottom: 34px;
+  }
+  .square-bg h2 {
+    font-weight: 700;
+  }
+  .square-bg p {
+    color: #ffffff;
+    max-width: 85%;
+    margin: 0 auto;
+    margin-top: 12px;
+  }
+  .square-bg img {
+    max-width: 12%;
+    margin-bottom: 32px;
+  }
+  .square-bg .linea {
+    background-image: url("/img/patron-blanco.png");
+    height: 191px;
+    background-size: cover;
+    background-position: center center;
+    display: block;
+    background-repeat: no-repeat;
+    margin-top: 14%;
+  }
+  
+  .square-2 {
+    background-color: #d6e0ff;
+    color: #151515;
+    border-radius: 18px;
+    min-height: 500px;
+    padding-top: 40px;
+    margin: 32px 0;
+    padding-bottom: 34px;
+  }
+  .square-2 h2 {
+    font-weight: 700;
+  }
+  .square-2 p {
+    color: #757575;
+    max-width: 85%;
+    margin: 0 auto;
+    margin-top: 12px;
+  }
+  .square-2 img {
+    max-width: 12%;
+    margin-bottom: 32px;
+  }
+  .square-2 .linea {
+    background-image: url("/img/patron.png");
+    height: 191px;
+    background-size: cover;
+    background-position: center center;
+    display: block;
+    background-repeat: no-repeat;
+    margin-top: 14%;
+  }
+  
+  .square-3 {
+    background-color: #f3f6ff;
+    color: #151515;
+    border-radius: 18px;
+    min-height: 500px;
+    padding-top: 40px;
+    margin: 32px 0;
+    padding-bottom: 34px;
+  }
+  .square-3 h2 {
+    font-weight: 700;
+  }
+  .square-3 p {
+    color: #757575;
+    max-width: 85%;
+    margin: 0 auto;
+    margin-top: 12px;
+  }
+  .square-3 img {
+    max-width: 12%;
+    margin-bottom: 32px;
+  }
+  .square-3 .linea {
+    background-image: url("/img/patron.png");
+    height: 191px;
+    background-size: cover;
+    background-position: center center;
+    display: block;
+    background-repeat: no-repeat;
+    margin-top: 14%;
+  }
+  
+  .icon-squares {
+    margin-top: 74px;
+  }
+  
+  /* 576px */ /* MEDIA QUERIES *//*# sourceMappingURL=index.css.map */
