--- a/css/seccion-2/_seccion-two.scss
+++ b/css/seccion-2/_seccion-two.scss
@@ -1,7 +1,8 @@
 .title-paragraph h2{
     color:#151515;
     font-size: 24px;
+    font-weight: 700;
 }
 .title-paragraph p{
-    color:gray;
+    color: $grayColor;
 }
