--- a/css/index.scss
+++ b/css/index.scss
@@ -1,9 +1,12 @@
+
 @use '_main-banner.scss';
 @use '_icon-squares.scss';
 @use '_nav.scss';
 @use '_formatting.scss';
 @use '../css/seccion-2/seccion-two.scss';
-
+@use '_cubrir.scss';
+@use '_aire-card.scss';
+@use '_clientes.scss';
 
 
 
