--- a/css/_formatting.scss
+++ b/css/_formatting.scss
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6{
     font-family: 'Manrope', sans-serif;
     line-height: 1.5;
+    font-weight: 700;
 }
 p{
     font-family: 'Inter', sans-serif;
