--- a/css/index.css
+++ b/css/index.css
@@ -1,168 +1,252 @@
 .main-banner {
-    background-image: url("/img/background.jpeg");
-    height: 140vw;
-    background-size: cover;
-    background-position: center center;
-    padding: 24% 4%;
-    color: white;
-    text-align: center;
-    max-width: 95%;
-    margin: auto;
-    border-radius: 18px;
-    margin-top: 32px;
-  }
-  
-  .main-banner h1 {
-    font-size: 28px;
-    line-height: 1.5;
-  }
-  
-  .main-banner p {
-    font-size: 18px;
-    letter-spacing: 0.5px;
-    line-height: 1.78;
-    font-weight: lighter;
-  }
-  
-  .navbar-brand img {
-    width: 33%;
-    height: auto;
-  }
-  
-  .navbar-toggler-icon {
-    background-image: url("../img/ic_menu@3x.png");
-    background-size: contain;
-    height: 32px;
-    width: 32px;
-  }
-  
-  .navbar-toggler {
-    border: none;
-    padding: 0;
-    height: 32px;
-    width: 32px;
-  }
-  
-  .navbar-toggler:focus {
-    box-shadow: none;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "Manrope", sans-serif;
-    line-height: 1.5;
-  }
-  
-  p {
-    font-family: "Inter", sans-serif;
-    line-height: 28px;
-  }
-  
-  .title-paragraph h2 {
-    color: #151515;
-    font-size: 24px;
-    font-weight: 700;
-  }
-  
-  .title-paragraph p {
-    color: #757575;
-  }
-  
-  .square-bg {
-    background-color: #2965fe;
-    color: #FFF;
-    border-radius: 18px;
-    min-height: 500px;
-    padding-top: 40px;
-    margin: 32px 0;
-    padding-bottom: 34px;
-  }
-  .square-bg h2 {
-    font-weight: 700;
-  }
-  .square-bg p {
-    color: #ffffff;
-    max-width: 85%;
-    margin: 0 auto;
-    margin-top: 12px;
-  }
-  .square-bg img {
-    max-width: 12%;
-    margin-bottom: 32px;
-  }
-  .square-bg .linea {
-    background-image: url("/img/patron-blanco.png");
-    height: 191px;
-    background-size: cover;
-    background-position: center center;
-    display: block;
-    background-repeat: no-repeat;
-    margin-top: 14%;
-  }
-  
-  .square-2 {
-    background-color: #d6e0ff;
-    color: #151515;
-    border-radius: 18px;
-    min-height: 500px;
-    padding-top: 40px;
-    margin: 32px 0;
-    padding-bottom: 34px;
-  }
-  .square-2 h2 {
-    font-weight: 700;
-  }
-  .square-2 p {
-    color: #757575;
-    max-width: 85%;
-    margin: 0 auto;
-    margin-top: 12px;
-  }
-  .square-2 img {
-    max-width: 12%;
-    margin-bottom: 32px;
-  }
-  .square-2 .linea {
-    background-image: url("/img/patron.png");
-    height: 191px;
-    background-size: cover;
-    background-position: center center;
-    display: block;
-    background-repeat: no-repeat;
-    margin-top: 14%;
-  }
-  
-  .square-3 {
-    background-color: #f3f6ff;
-    color: #151515;
-    border-radius: 18px;
-    min-height: 500px;
-    padding-top: 40px;
-    margin: 32px 0;
-    padding-bottom: 34px;
-  }
-  .square-3 h2 {
-    font-weight: 700;
-  }
-  .square-3 p {
-    color: #757575;
-    max-width: 85%;
-    margin: 0 auto;
-    margin-top: 12px;
-  }
-  .square-3 img {
-    max-width: 12%;
-    margin-bottom: 32px;
-  }
-  .square-3 .linea {
-    background-image: url("/img/patron.png");
-    height: 191px;
-    background-size: cover;
-    background-position: center center;
-    display: block;
-    background-repeat: no-repeat;
-    margin-top: 14%;
-  }
-  
+  background-image: url("/img/background.jpeg");
+  height: 140vw;
+  background-size: cover;
+  background-position: center center;
+  padding: 24% 4%;
+  color: white;
+  text-align: center;
+  max-width: 95%;
+  margin: auto;
+  border-radius: 18px;
+  margin-top: 32px;
+}
 
-  
-  /* 576px */ /* MEDIA QUERIES *//*# sourceMappingURL=index.css.map */
+.main-banner h1 {
+  font-size: 28px;
+  line-height: 1.5;
+}
+
+.main-banner p {
+  font-size: 18px;
+  letter-spacing: 0.5px;
+  line-height: 1.78;
+  font-weight: lighter;
+}
+
+.square-bg {
+  background-color: #2965fe;
+  color: #FFF;
+  border-radius: 18px;
+  min-height: 500px;
+  padding-top: 40px;
+  margin: 32px 0;
+  padding-bottom: 34px;
+}
+.square-bg h2 {
+  font-weight: 700;
+}
+.square-bg p {
+  color: #ffffff;
+  max-width: 85%;
+  margin: 0 auto;
+  margin-top: 12px;
+}
+.square-bg img {
+  max-width: 12%;
+  margin-bottom: 32px;
+}
+.square-bg .linea {
+  background-image: url("/img/patron-blanco.png");
+  height: 191px;
+  background-size: cover;
+  background-position: center center;
+  display: block;
+  background-repeat: no-repeat;
+  margin-top: 14%;
+}
+
+.square-2 {
+  background-color: #d6e0ff;
+  color: #151515;
+  border-radius: 18px;
+  min-height: 500px;
+  padding-top: 40px;
+  margin: 32px 0;
+  padding-bottom: 34px;
+}
+.square-2 h2 {
+  font-weight: 700;
+}
+.square-2 p {
+  color: #757575;
+  max-width: 85%;
+  margin: 0 auto;
+  margin-top: 12px;
+}
+.square-2 img {
+  max-width: 12%;
+  margin-bottom: 32px;
+}
+.square-2 .linea {
+  background-image: url("/img/patron.png");
+  height: 191px;
+  background-size: cover;
+  background-position: center center;
+  display: block;
+  background-repeat: no-repeat;
+  margin-top: 14%;
+}
+
+.square-3 {
+  background-color: #f3f6ff;
+  color: #151515;
+  border-radius: 18px;
+  min-height: 500px;
+  padding-top: 40px;
+  margin: 32px 0;
+  padding-bottom: 34px;
+}
+.square-3 h2 {
+  font-weight: 700;
+}
+.square-3 p {
+  color: #757575;
+  max-width: 85%;
+  margin: 0 auto;
+  margin-top: 12px;
+}
+.square-3 img {
+  max-width: 12%;
+  margin-bottom: 32px;
+}
+.square-3 .linea {
+  background-image: url("/img/patron.png");
+  height: 191px;
+  background-size: cover;
+  background-position: center center;
+  display: block;
+  background-repeat: no-repeat;
+  margin-top: 14%;
+}
+
+.icon-squares {
+  margin-top: 80px;
+}
+
+.navbar-brand img {
+  width: 33%;
+  height: auto;
+}
+
+.navbar-toggler-icon {
+  background-image: url("../img/ic_menu@3x.png");
+  background-size: contain;
+  height: 32px;
+  width: 32px;
+}
+
+.navbar-toggler {
+  border: none;
+  padding: 0;
+  height: 32px;
+  width: 32px;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Manrope", sans-serif;
+  line-height: 1.5;
+  font-weight: 700;
+}
+
+p {
+  font-family: "Inter", sans-serif;
+  line-height: 28px;
+}
+
+.title-paragraph h2 {
+  color: #151515;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.title-paragraph p {
+  color: gray;
+}
+
+#cubrir {
+  padding: 18% 4%;
+  background-color: #f3f6ff;
+  margin-top: 20%;
+}
+#cubrir p {
+  color: #757575;
+}
+#cubrir .inner-cubrir {
+  background-color: #fff;
+  padding: 8%;
+  margin-top: 18%;
+  border-radius: 18px;
+}
+#cubrir .inner-cubrir h2 {
+  font-size: 18px;
+  margin: 44px 0;
+}
+#cubrir img {
+  border-radius: 18px;
+}
+#cubrir .icon-header {
+  display: flex;
+  flex-direction: row;
+  -moz-column-gap: 22px;
+  column-gap: 22px;
+  margin: 24px 0;
+  row-gap: 41px;
+  padding: 8% 6%;
+  justify-content: stretch;
+  align-items: center;
+  border: 1px solid #efefef;
+  border-radius: 18px;
+}
+#cubrir .icon-header img {
+  max-width: 10%;
+}
+#cubrir .icon-header h3 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.aire-card {
+  background-color: #f3f6ff;
+}
+.aire-card .aire-card-cont {
+  padding: 8% 6%;
+  background-color: white;
+  margin: 0 auto;
+  margin-bottom: 42px;
+  max-width: 95%;
+  border-radius: 18px;
+}
+.aire-card .aire-card-cont img {
+  max-width: 12%;
+  margin-bottom: 8%;
+}
+.aire-card .aire-card-cont p {
+  color: #757575;
+}
+.aire-card .aire-card-cont li {
+  color: #757575;
+}
+
+.clientes {
+  padding: 40px 32px;
+}
+.clientes .clientes-cont {
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 88px;
+       column-gap: 88px;
+  row-gap: 64px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 49px;
+}
+.clientes img {
+  max-width: 200px;
+}
+
+/* 576px */ /* MEDIA QUERIES *//*# sourceMappingURL=index.css.map */
