--- a/css/index.scss
+++ b/css/index.scss
@@ -7,6 +7,10 @@
 @use '_cubrir.scss';
 @use '_aire-card.scss';
 @use '_clientes.scss';
+@use '_gran-tamano.scss';
+@use '_destacados.scss';
+@use '_contacto.scss';
+
 
 
 
