--- a/css/_formatting.scss
+++ b/css/_formatting.scss
@@ -2,8 +2,10 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'Manrope', sans-serif;
     line-height: 1.5;
     font-weight: 700;
+    color: #151515;
 }
-p{
+p, span{
     font-family: 'Inter', sans-serif;
     line-height: 28px;
+    color: #757575;
 }
