--- a/css/_aire-card.scss
+++ b/css/_aire-card.scss
@@ -8,7 +8,7 @@
         max-width: 95%;
         border-radius: 18px;
         img{
-            max-width: 12%;
+            max-width: 58px;
             margin-bottom: 8%;
         }
         p{
