--- a/css/index.css
+++ b/css/index.css
@@ -1,344 +1,1 @@
-.main-banner {
-  background-image: url("/img/background.jpeg");
-  height: 140vw;
-  background-size: cover;
-  background-position: center center;
-  padding: 24% 4%;
-  color: white;
-  text-align: center;
-  max-width: 95%;
-  margin: auto;
-  border-radius: 18px;
-  margin-top: 32px;
-}
-
-.main-banner h1 {
-  font-size: 28px;
-  line-height: 1.5;
-}
-
-.main-banner p {
-  font-size: 18px;
-  letter-spacing: 0.5px;
-  line-height: 1.78;
-  font-weight: lighter;
-}
-
-.square-bg {
-  background-color: #2965fe;
-  color: #FFF;
-  border-radius: 18px;
-  min-height: 500px;
-  padding-top: 40px;
-  margin: 32px 0;
-  padding-bottom: 34px;
-}
-.square-bg h2 {
-  font-weight: 700;
-}
-.square-bg p {
-  color: #ffffff;
-  max-width: 85%;
-  margin: 0 auto;
-  margin-top: 12px;
-}
-.square-bg img {
-  max-width: 12%;
-  margin-bottom: 32px;
-}
-.square-bg .linea {
-  background-image: url("/img/patron-blanco.png");
-  height: 191px;
-  background-size: cover;
-  background-position: center center;
-  display: block;
-  background-repeat: no-repeat;
-  margin-top: 14%;
-}
-
-.square-2 {
-  background-color: #d6e0ff;
-  color: #151515;
-  border-radius: 18px;
-  min-height: 500px;
-  padding-top: 40px;
-  margin: 32px 0;
-  padding-bottom: 34px;
-}
-.square-2 h2 {
-  font-weight: 700;
-}
-.square-2 p {
-  color: #757575;
-  max-width: 85%;
-  margin: 0 auto;
-  margin-top: 12px;
-}
-.square-2 img {
-  max-width: 12%;
-  margin-bottom: 32px;
-}
-.square-2 .linea {
-  background-image: url("/img/patron.png");
-  height: 191px;
-  background-size: cover;
-  background-position: center center;
-  display: block;
-  background-repeat: no-repeat;
-  margin-top: 14%;
-}
-
-.square-3 {
-  background-color: #f3f6ff;
-  color: #151515;
-  border-radius: 18px;
-  min-height: 500px;
-  padding-top: 40px;
-  margin: 32px 0;
-  padding-bottom: 34px;
-}
-.square-3 h2 {
-  font-weight: 700;
-}
-.square-3 p {
-  color: #757575;
-  max-width: 85%;
-  margin: 0 auto;
-  margin-top: 12px;
-}
-.square-3 img {
-  max-width: 12%;
-  margin-bottom: 32px;
-}
-.square-3 .linea {
-  background-image: url("/img/patron.png");
-  height: 191px;
-  background-size: cover;
-  background-position: center center;
-  display: block;
-  background-repeat: no-repeat;
-  margin-top: 14%;
-}
-
-.icon-squares {
-  margin-top: 80px;
-}
-
-.navbar-brand img {
-  width: 33%;
-  height: auto;
-}
-
-.navbar-toggler-icon {
-  background-image: url("../img/ic_menu@3x.png");
-  background-size: contain;
-  height: 32px;
-  width: 32px;
-}
-
-.navbar-toggler {
-  border: none;
-  padding: 0;
-  height: 32px;
-  width: 32px;
-}
-
-.navbar-toggler:focus {
-  box-shadow: none;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Manrope", sans-serif;
-  line-height: 1.5;
-  font-weight: 700;
-  color: #151515;
-}
-
-p, span {
-  font-family: "Inter", sans-serif;
-  line-height: 28px;
-  color: #757575;
-}
-
-.title-paragraph h2 {
-  color: #151515;
-  font-size: 24px;
-  font-weight: 700;
-}
-
-.title-paragraph p {
-  color: gray;
-}
-
-#cubrir {
-  padding: 18% 4%;
-  background-color: #f3f6ff;
-  margin-top: 20%;
-}
-#cubrir p {
-  color: #757575;
-}
-#cubrir .inner-cubrir {
-  background-color: #fff;
-  padding: 8%;
-  margin-top: 18%;
-  border-radius: 18px;
-}
-#cubrir .inner-cubrir h2 {
-  font-size: 18px;
-  margin: 44px 0;
-}
-#cubrir img {
-  border-radius: 18px;
-  width: 100%;
-}
-#cubrir .icon-header {
-  display: flex;
-  flex-direction: row;
-  -moz-column-gap: 22px;
-  column-gap: 22px;
-  margin: 24px 0;
-  row-gap: 41px;
-  padding: 8% 6%;
-  justify-content: stretch;
-  align-items: center;
-  border: 1px solid #efefef;
-  border-radius: 18px;
-}
-#cubrir .icon-header img {
-  max-width: 10%;
-}
-#cubrir .icon-header h3 {
-  margin: 0;
-  font-size: 18px;
-}
-
-.aire-card {
-  background-color: #f3f6ff;
-}
-.aire-card .aire-card-cont {
-  padding: 8% 6%;
-  background-color: white;
-  margin: 0 auto;
-  margin-bottom: 42px;
-  max-width: 95%;
-  border-radius: 18px;
-}
-.aire-card .aire-card-cont img {
-  max-width: 12%;
-  margin-bottom: 8%;
-}
-.aire-card .aire-card-cont p {
-  color: #757575;
-}
-.aire-card .aire-card-cont li {
-  color: #757575;
-}
-
-.clientes {
-  padding: 40px 32px;
-}
-.clientes .clientes-cont {
-  display: flex;
-  flex-wrap: wrap;
-  -moz-column-gap: 88px;
-       column-gap: 88px;
-  row-gap: 64px;
-  justify-content: center;
-  align-items: center;
-  margin-top: 49px;
-}
-.clientes img {
-  max-width: 156px;
-}
-
-.gran-tamano .gran-cont {
-  background-color: #f3f6ff;
-  padding: 30px;
-  border-radius: 18px;
-  max-width: 95%;
-}
-.gran-tamano .gran-cont img {
-  border-radius: 18px;
-}
-.gran-tamano .gran-cont h3 {
-  margin: 38px 0px 24px;
-  color: #151515;
-}
-.gran-tamano .gran-cont p {
-  color: #757575;
-}
-
-.destacados .destacados-cont {
-  margin: 30% 0;
-  text-align: center;
-}
-.destacados .proyecto {
-  border: 1px solid #e2e2e2;
-  border-radius: 18px;
-  padding: 8%;
-  margin-bottom: 4%;
-}
-.destacados .proyecto img {
-  border-radius: 18px;
-}
-.destacados .proyecto .tag {
-  background-color: #f3f6ff;
-  margin: 18px 0;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  border-radius: 18px;
-  padding: 6px 14px;
-  display: flex;
-  align-items: center;
-  -moz-column-gap: 7px;
-       column-gap: 7px;
-  font-weight: 700;
-}
-.destacados .proyecto .tag img {
-  max-width: 18px;
-}
-.destacados .proyecto .nombre-lugar h3 {
-  margin-bottom: 0;
-}
-
-.contacto {
-  background-color: #f3f6ff;
-}
-.contacto .f-enviar {
-  display: block;
-  width: 100%;
-  text-align: center;
-  justify-content: center;
-  background-color: #275cff;
-  color: white;
-  border: none;
-  border-radius: 9px;
-  padding: 12px 8px;
-}
-.contacto .contacto-title {
-  margin: 42px 0;
-  padding: 64px 12px 32px;
-  text-align: center;
-}
-.contacto .form {
-  background-color: #fff;
-  padding: 32px 12px;
-  max-width: 95%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  border-radius: 18px;
-}
-.contacto .form div {
-  display: flex;
-  flex-direction: column;
-  margin: 24px 0;
-}
-.contacto .form div input, .contacto .form div textarea {
-  border: 1px solid #eeeeee;
-  border-radius: 12px;
-  padding: 8px 4px;
-}
-
-/* 576px */ /* MEDIA QUERIES *//*# sourceMappingURL=index.css.map */
+.main-banner{background-image:url("/img/background.jpeg");height:140vw;background-size:cover;background-position:center center;padding:24% 4%;color:#fff;text-align:center;max-width:95%;margin:auto;border-radius:18px;margin-top:32px}.main-banner h1{font-size:28px;line-height:1.5;color:#fff}.main-banner p{font-size:18px;letter-spacing:.5px;line-height:1.78;font-weight:lighter;color:#fff}@media(min-width: 768px){.main-banner h1{font-size:42px}.main-banner p{font-size:24px}.main-banner{height:116vw}}@media(min-width: 1200px){.main-banner{height:20vw}}.square-bg{background-color:#2965fe;color:#fff;border-radius:18px;min-height:500px;padding-top:40px;margin:32px 0;padding-bottom:34px}.square-bg h2{font-weight:700;color:#fff}.square-bg p{color:#fff;max-width:85%;margin:0 auto;margin-top:12px}.square-bg img{max-width:54px;margin-bottom:32px}.square-bg .linea{background-image:url("/img/patron-blanco.png");height:218px;background-size:cover;background-position:center center;display:block;background-repeat:no-repeat;margin-top:12%}.square-2{background-color:#d6e0ff;color:#151515;border-radius:18px;min-height:500px;padding-top:40px;margin:32px 0;padding-bottom:34px}.square-2 h2{font-weight:700;color:#fff}.square-2 p{color:#757575;max-width:85%;margin:0 auto;margin-top:12px}.square-2 img{max-width:54px;margin-bottom:32px}.square-2 .linea{background-image:url("/img/patron.png");height:218px;background-size:cover;background-position:center center;display:block;background-repeat:no-repeat;margin-top:12%}.square-2 h2{color:#151515}.square-3{background-color:#f3f6ff;color:#151515;border-radius:18px;min-height:500px;padding-top:40px;margin:32px 0;padding-bottom:34px}.square-3 h2{font-weight:700;color:#fff}.square-3 p{color:#757575;max-width:85%;margin:0 auto;margin-top:12px}.square-3 img{max-width:54px;margin-bottom:32px}.square-3 .linea{background-image:url("/img/patron.png");height:218px;background-size:cover;background-position:center center;display:block;background-repeat:no-repeat;margin-top:12%}.square-3 h2{color:#151515}.icon-squares{margin-top:80px}.main-squares-cont{display:flex;-moz-column-gap:24px;column-gap:24px}.main-squares-cont h2{font-size:24px}@media(min-width: 768px){.square-bg .linea{height:289px;margin-top:3%}.square-2 .linea{height:289px;margin-top:3%}.square-3 .linea{height:289px;margin-top:3%}}.navbar-brand img{width:33%;height:auto}.navbar-toggler-icon{background-image:url("../img/ic_menu@3x.png");background-size:contain;height:32px;width:32px}.navbar-toggler{border:none;padding:0;height:32px;width:32px}.navbar-toggler:focus{box-shadow:none}.title-paragraph h2{color:#151515;font-size:24px;font-weight:700}.title-paragraph p{color:gray}@media(min-width: 768px){.title-paragraph h2{font-size:32px}}#cubrir{padding:42px 4%;background-color:#f3f6ff;margin-top:20%}#cubrir p{color:#757575}#cubrir .inner-cubrir{background-color:#fff;padding:8%;margin-top:18%;border-radius:18px}#cubrir .inner-cubrir h2{font-size:18px;margin:44px 0}#cubrir img{border-radius:18px;width:100%}#cubrir .icon-header{display:flex;flex-direction:row;-moz-column-gap:22px;column-gap:22px;margin:24px 0;row-gap:41px;padding:24px 24px;justify-content:stretch;align-items:center;border:1px solid #efefef;border-radius:18px}#cubrir .icon-header img{max-width:54px}#cubrir .icon-header h3{margin:0;font-size:18px}.icon-header-cont{display:flex;flex-wrap:wrap;-moz-column-gap:24px;column-gap:24px;justify-content:center}@media(min-width: 992px){#cubrir .icon-header{max-width:300px;width:268px}}.aire-card{background-color:#f3f6ff}.aire-card .aire-card-cont{padding:8% 6%;background-color:#fff;margin:0 auto;margin-bottom:42px;max-width:95%;border-radius:18px}.aire-card .aire-card-cont img{max-width:58px;margin-bottom:8%}.aire-card .aire-card-cont p{color:#757575}.aire-card .aire-card-cont li{color:#757575}.clientes{padding:40px 32px}.clientes .clientes-cont{display:flex;flex-wrap:wrap;-moz-column-gap:88px;column-gap:88px;row-gap:64px;justify-content:center;align-items:center;margin-top:49px}.clientes img{max-width:156px}.gran-tamano .gran-cont{background-color:#f3f6ff;padding:30px;border-radius:18px;max-width:95%}.gran-tamano .gran-cont img{border-radius:18px}.gran-tamano .gran-cont h3{margin:38px 0px 24px;color:#151515}.gran-tamano .gran-cont p{color:#757575}@media(max-width: 1200px){.gran-tamano .gran-cont img{width:100%;max-height:313px}}.destacados .main-proyecto-cont{display:flex;flex-wrap:wrap;justify-content:center;-moz-column-gap:24px;column-gap:24px;max-width:1440px;margin:0 auto}.destacados .destacados-cont{margin:100px 0;text-align:center}.destacados .proyecto{border:1px solid #e2e2e2;border-radius:18px;padding:36px;margin-bottom:4%}.destacados .proyecto img{border-radius:18px;width:100%}.destacados .proyecto .tag{background-color:#f3f6ff;margin:18px 0;max-width:-moz-fit-content;max-width:fit-content;border-radius:18px;padding:6px 14px;display:flex;align-items:center;-moz-column-gap:7px;column-gap:7px;font-weight:700}.destacados .proyecto .tag img{max-width:18px}.destacados .proyecto .nombre-lugar h3{margin-bottom:0;font-size:24px}.contacto{background-color:#f3f6ff;padding-bottom:42px}.contacto .f-enviar{display:block;width:100%;text-align:center;justify-content:center;background-color:#275cff;color:#fff;border:none;border-radius:9px;padding:12px 8px}.contacto .contacto-title{margin:42px 0;padding:64px 12px 32px;text-align:center}.contacto .form{background-color:#fff;padding:18px 16px;max-width:95%;margin:0 auto;display:flex;flex-direction:column;border-radius:18px}.contacto .form div{display:flex;flex-direction:column;margin:24px 0}.contacto .form div input,.contacto .form div textarea{border:1px solid #eee;border-radius:12px;padding:8px 18px}.contacto .form div label{margin-bottom:4px}.contacto .form div ::-moz-placeholder{color:#b9b9b9}.contacto .form div ::placeholder{color:#b9b9b9}.contacto .iconos-final{margin:42px 0}.contacto .iconos-final img{max-width:60px;margin-bottom:24px}.contacto .iconos-container{text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center}footer{padding:42px 24px}footer img{max-width:200px}footer h3{margin-top:76px;font-size:18px}footer span{color:gray}h1,h2,h3,h4,h5,h6{font-family:"Manrope",sans-serif;line-height:1.5;font-weight:700;color:#151515}p,span{font-family:"Inter",sans-serif;line-height:28px;color:#757575}@media(min-width: 768px){h2{font-size:38px}h3{font-size:38px}}/*# sourceMappingURL=index.css.map */
