--- a/css/_gran-tamano.scss
+++ b/css/_gran-tamano.scss
@@ -16,3 +16,9 @@
         }
     }
 }
+@media(max-width:1200px){
+    .gran-tamano .gran-cont img{
+        width: 100%;
+        max-height: 313px;
+    }
+}
