--- a/css/index.scss
+++ b/css/index.scss
@@ -1,8 +1,8 @@
 
+
 @use '_main-banner.scss';
 @use '_icon-squares.scss';
 @use '_nav.scss';
-@use '_formatting.scss';
 @use '../css/seccion-2/seccion-two.scss';
 @use '_cubrir.scss';
 @use '_aire-card.scss';
@@ -10,8 +10,9 @@
 @use '_gran-tamano.scss';
 @use '_destacados.scss';
 @use '_contacto.scss';
+@use '_footer.scss';
 
-
+@use '_formatting.scss';
 
 
 
