--- a/css/_aire-card.scss
+++ b/css/_aire-card.scss
@@ -1,7 +1,9 @@
 .aire-card{
     background-color: #f3f6ff;
+    display: flex;
+    column-gap: 24px;
     .aire-card-cont{
-        padding: 8% 6%;
+        padding: 84px 42px;
         background-color: white;
         margin: 0 auto;
         margin-bottom: 42px;
@@ -9,7 +11,7 @@
         border-radius: 18px;
         img{
             max-width: 58px;
-            margin-bottom: 8%;
+            margin-bottom: 32px;
         }
         p{
             color: #757575;
