--- a/css/_contacto.scss
+++ b/css/_contacto.scss
@@ -20,7 +20,7 @@
     .form{
         background-color: #fff;
         padding: 18px 16px;
-        max-width: 95%;
+        max-width: 800px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
