--- a/css/_destacados.scss
+++ b/css/_destacados.scss
@@ -8,8 +8,8 @@
     margin: 0 auto;
   }
   .destacados-cont {
-    margin: 100px 0;
     text-align: center;
+    padding: 100px 0;
   }
   .proyecto {
     img {
