--- a/css/_formatting.scss
+++ b/css/_formatting.scss
@@ -9,6 +9,9 @@ p, span{
     line-height: 28px;
     color: #757575;
 }
+li{
+    font-family: 'Manrope', sans-serif;
+}
 
 @media  (min-width: 768px){
     h2{
