--- a/css/_cubrir.scss
+++ b/css/_cubrir.scss
@@ -1,9 +1,18 @@
 #cubrir{
+    #cubrir_hijo{
+        padding: 64px;
+    }
     padding: 42px 4%;
     background-color: #f3f6ff;
     margin-top: 64px; 
-    p{
-        color: #757575;
+    .title-text-img{
+        p{
+            color: #757575;
+            padding: 4% 8% 4% 0;
+        }
+        h3{
+            padding-right: 8%;
+        }
     }
     .title-text-img{
         display: flex;
@@ -14,6 +23,8 @@
         padding: 8%;
         margin-top: 64px;
         border-radius: 18px;
+        max-width: 1120px;
+        margin: 0 auto;
         h2{
             font-size: 18px;
             margin: 44px 0;
@@ -35,6 +46,7 @@
         align-items: center;
         border: 1px solid #efefef;
         border-radius: 18px;
+        width: 262px;
         img{
             max-width: 54px;
         }
@@ -52,8 +64,28 @@
     max-width: 1140px;
 }
 @media(min-width:992px){
-    #cubrir .icon-header{
-        max-width: 300px;
-        width: 268px;
+    #cubrir {
+        .inner-cubrir {
+        background-color: #fff;
+        padding: 2%;
+        margin-top: 32px;
+        }
+        .icon-header{
+            max-width: 300px;
+            width: 268px;
+        }
+        .icon-header-cont {
+            justify-content: space-between;
+        }
+        .inner-cubrir 
+            h2 {
+            margin: 22px 0;
+            font-size: 24px;
+        }
+    }
+}
+@media(max-width:992px){
+    #cubrir .title-text-img {
+        display: block; 
     }
 }
