--- a/css/_main-banner.scss
+++ b/css/_main-banner.scss
@@ -3,17 +3,21 @@
     height: 140vw;
     background-size: cover;
     background-position: center center;
-    padding: 24% 4%;
     color: white;
     text-align: center;
     max-width: 95%;
     margin: auto;
     border-radius: 18px;
     margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 24px;
 }
 .main-banner h1{
     font-size: 28px;
-    line-height: 1.5;
+    line-height: 1.2;
     color: #FFF;
 }
 .main-banner p{
@@ -36,6 +40,10 @@
 }
 @media(min-width:1200px){
     .main-banner{
-        height: 20vw;
+        height: 38vw;
+        h1{
+            font-size: 64px;
+            max-width: 800px;
+        }
     }
 }
