--- a/css/_main-banner.scss
+++ b/css/_main-banner.scss
@@ -1,5 +1,5 @@
 .main-banner{
-    background-image: url('img/background.jpeg');
+    background-image: url('../img/background.jpeg');
     height: 140vw;
     background-size: cover;
     background-position: center center;
