--- a/css/_icon-squares.scss
+++ b/css/_icon-squares.scss
@@ -32,17 +32,17 @@
 }
 
 .square-bg{
-    @include square(#2965fe, #FFF, #ffffff, '/img/patron-blanco.png');
+    @include square(#2965fe, #FFF, #ffffff, '../img/patron-blanco.png');
     
 }
 .square-2{
-    @include square(#d6e0ff, #151515, #757575, '/img/patron.png');
+    @include square(#d6e0ff, #151515, #757575, '../img/patron.png');
     h2{
         color: #151515
     }
 }
 .square-3{
-    @include square(#f3f6ff, #151515, #757575, '/img/patron.png');
+    @include square(#f3f6ff, #151515, #757575, '../img/patron.png');
     h2{
         color: #151515
     }
