--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -2,6 +2,7 @@
     margin: 0 auto;
     justify-content: center;
     column-gap: 42px;
+    padding: 16px 0 2px 0;
     li{
         font-weight: 600;
     }
