--- a/css/_aire-card.scss
+++ b/css/_aire-card.scss
@@ -1,14 +1,22 @@
 .aire-card{
+    .ul-cont{
+        display: flex;
+        column-gap: 94px;
+    }
+    ul{
+        margin-top: 32px;
+        padding-left: 20px;
+    }
     background-color: #f3f6ff;
     display: flex;
     column-gap: 24px;
     .aire-card-cont{
-        padding: 84px 42px;
+        padding: 32px 32px;
         background-color: white;
         margin: 0 auto;
         margin-bottom: 42px;
         max-width: 95%;
-        border-radius: 18px;
+        border-radius: 16px;
         img{
             max-width: 58px;
             margin-bottom: 32px;
@@ -18,6 +26,7 @@
         }
         li{
             color: #757575;
+            margin-top: 8px;
         }
     }
     
