--- a/css/_main-banner.scss
+++ b/css/_main-banner.scss
@@ -7,7 +7,7 @@
     text-align: center;
     max-width: 95%;
     margin: auto;
-    border-radius: 18px;
+    border-radius: 16px;
     margin-top: 32px;
     display: flex;
     flex-direction: column;
@@ -32,7 +32,7 @@
         font-size: 42px;
     }
     .main-banner p{
-        font-size: 24px;
+        font-size: 18px;
     }
     .main-banner{
         height: 116vw;
@@ -41,9 +41,11 @@
 @media(min-width:1200px){
     .main-banner{
         height: 38vw;
+        max-height: 680px;
         h1{
             font-size: 64px;
             max-width: 800px;
+            line-height: 64px;
         }
     }
 }
