--- a/css/seccion-2/_seccion-two.scss
+++ b/css/seccion-2/_seccion-two.scss
@@ -1,13 +1,19 @@
 $grayColor : #757575;
-.title-paragraph h2{
+
+.title-paragraph{ 
+    margin: 95px 0;
+    margin-left: auto;
+    margin-right: auto;
+    h2{
     color:#151515;
     font-size: 24px;
-    font-weight: 700;
+    }
+    p{
+        color: $grayColor;
+        margin-top: 16px;
+    }
 }
-.title-paragraph p{
-    color: $grayColor;
-    margin-top: 32px;
-}
+
 @media (min-width:768px){
     .title-paragraph h2{
         font-size: 32px;
