--- a/css/_gran-tamano.scss
+++ b/css/_gran-tamano.scss
@@ -4,11 +4,12 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        padding-left: 64px;
-        padding-right: 158px;
+        padding-left: 62px;
+        padding-right: 78px;
         display: flex;
         justify-content: center;
         flex-direction: column;
+        width: 771px;
     }
     .gran-cont{
         background-color: #f3f6ff;
