--- a/css/_gran-tamano.scss
+++ b/css/_gran-tamano.scss
@@ -4,12 +4,14 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        padding-left: 62px;
-        padding-right: 78px;
+        padding-left: 64px;
+        padding-right: 57px;
+        padding-top: 80px;
+        padding-bottom: 80px;
         display: flex;
         justify-content: center;
         flex-direction: column;
-        width: 771px;
+        width: 590px;
     }
     .gran-cont{
         background-color: #f3f6ff;
@@ -19,10 +21,14 @@
             border-radius: 8px; 
             margin: 32px;
             margin-right: 0;
+            width: 496px;
+            height: 288px;
         }
         h3{
             margin: 2px 0px 24px;
             color: #151515;
+            font-size: 32px;
+            line-height: 48px;
         }
         p{
             color: #757575;
